--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -17,17 +17,23 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 16  # Specify the Node.js version your project uses
 
       - name: Install Dependencies
         run: npm install
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
+        # Installs Firebase CLI globally so it's available in the workflow
+
       - name: Start Firebase Server
-        run: firebase serve &
+        run: firebase emulators:start --only hosting &
+        # Starts the Firebase hosting emulator in the background
 
       - name: Wait for Server
         run: npx wait-on http://localhost:5000
         # Ensures the server is up and accessible before running tests
 
       - name: Run Cypress Tests
-        run: npx cypress run
+        run: npx cypress run --config-file cypress.config.js
+        # Runs Cypress tests with the specified config file
