- Correct timestamps in all includes - Trigger Github Actions on pushes to all branches

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -2,9 +2,11 @@ name: Run Cypress and Cucumber Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - '**'
   pull_request:
-    branches: [ master ]
+    branches: 
+      - '**'
 
 jobs:
   e2e-tests:
