--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "type": "module",
   "scripts": {
     "start": "firebase serve",
-    "test": "cypress run"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Amr Lotfy",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^14.3.2",
-    "cypress-cucumber-preprocessor": "^4.3.1",
-    "esbuild": "^0.17.0"
+    "esbuild": "^0.17.0",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "firebase": "^9.23.0"
