--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "dependencies": {
     "@sentry/node": "^9.19.0",
-    "firebase": "^9.23.0"
+    "firebase": "^9.23.0",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
+    "winston-loggly-bulk": "^3.3.2"
   }
 }
