--- a/package.json
+++ b/package.json
@@ -5,28 +5,33 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
     "start": "node src/index.js"
   },
   "keywords": [],
   "author": "Amr Lotfy",
   "license": "ISC",
   "devDependencies": {
-    "esbuild": "^0.17.0",
-    "vitest": "^3.1.4",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "esbuild": "^0.25.4",
+    "jest": "^29.0.0"
   },
   "dependencies": {
-    "@google-cloud/firestore": "^6.4.1",
+    "@google-cloud/firestore": "^7.11.1",
     "@sentry/node": "^9.19.0",
-    "firebase": "^9.23.0",
-    "firebase-admin": "^11.5.0",
+    "bcryptjs": "^2.4.3",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "ioredis": "^5.3.1",
+    "node-fetch": "^3.3.1",
     "nodemailer": "^6.8.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "bcrypt": "^5.1.0",
-    "node-fetch": "^3.3.1"
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "transform": {},
+    "setupFiles": ["<rootDir>/jest.setup.js"]
   }
 }
