--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "node-fetch": "^3.3.1",
     "nodemailer": "^6.8.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0"
+    "winston-daily-rotate-file": "^5.0.0",
+    "joi": "^17.9.1"
   },
   "jest": {
     "testEnvironment": "node",
