--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "dotenv": "^16.0.0",
     "esbuild": "^0.25.4",
-    "jest": "^29.0.0"
+    "jest": "^29.0.0",
+    "jest-junit": "^16.0.0"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
@@ -24,15 +25,28 @@
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
     "ioredis": "^5.3.1",
+    "joi": "^17.9.1",
     "node-fetch": "^3.3.1",
     "nodemailer": "^6.8.0",
     "winston": "^3.17.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "joi": "^17.9.1"
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "jest": {
     "testEnvironment": "node",
     "transform": {},
-    "setupFiles": ["<rootDir>/jest.setup.js"]
+    "setupFiles": [
+      "<rootDir>/jest.setup.js"
+    ],
+   "reporters": [
+      "default",
+      [
+        "jest-junit",
+        {
+          "outputDirectory": "./reports",
+          "outputName": "junit.xml",
+          "suiteName": "Badr Delivery Platform Tests"
+        }
+      ]
+    ]
   }
 }
