ignore packed project xml

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+\# Logs
 logs
 *.log
 npm-debug.log*
@@ -6,6 +6,8 @@ yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
+project_files.xml
+reports/
 
 # Firebase cache
 .firebase/
