--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.0.0",
     "esbuild": "^0.25.4",
     "jest": "^29.0.0",
-    "jest-junit": "^16.0.0"
+    "jest-junit": "^16.0.0",
+    "js-yaml": "^4.1.0"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
@@ -37,7 +38,7 @@
     "setupFiles": [
       "<rootDir>/jest.setup.js"
     ],
-   "reporters": [
+    "reporters": [
       "default",
       [
         "jest-junit",
