--- a/package.json
+++ b/package.json
@@ -5,30 +5,31 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node src/index.js",
     "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "coverage": "node --experimental-vm-modules node_modules/.bin/jest --coverage",
-    "start": "node src/index.js"
+    "test:integration": "node --experimental-vm-modules node_modules/.bin/jest --testPathPattern=tests/integration"
   },
   "keywords": [],
   "author": "Amr Lotfy",
   "license": "ISC",
   "devDependencies": {
-    "dotenv": "^16.0.0",
-    "esbuild": "^0.25.4",
-    "jest": "^29.0.0",
+    "dotenv": "^16.5.0",
+    "esbuild": "^0.25.5",
+    "jest": "^29.7.0",
     "jest-junit": "^16.0.0",
     "js-yaml": "^4.1.0"
   },
   "dependencies": {
     "@google-cloud/firestore": "^7.11.1",
-    "@sentry/node": "^9.19.0",
-    "bcryptjs": "^2.4.3",
+    "@sentry/node": "^9.22.0",
+    "bcryptjs": "^3.0.2",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
-    "ioredis": "^5.3.1",
-    "joi": "^17.9.1",
-    "node-fetch": "^3.3.1",
-    "nodemailer": "^6.8.0",
+    "ioredis": "^5.6.1",
+    "joi": "^17.13.3",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
