--- a/tests/integration/data/registration-data.yml
+++ b/tests/integration/data/registration-data.yml
@@ -9,6 +9,7 @@ cases:
     expected:
       success: true
       nextStep: "verify_otp"
+      loginRole: "customer"   # Optional field
   - description: "Missing email"
     user:
       password: "StrongPass123!"
