--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.5.0",
     "esbuild": "^0.25.5",
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "jest-junit": "^16.0.0",
     "js-yaml": "^4.1.0"
   },
@@ -41,11 +42,14 @@
       "<rootDir>/jest.setup.js"
     ],
     "reporters": [
-       "default",
-       ["jest-html-reporter", {
-         "pageTitle": "Test Results",
-         "outputPath": "./test-report.html"
-       }]
-     ]
+    "default",
+    ["jest-html-reporters", {
+      "publicPath": "./test-report",
+      "filename": "report.html",
+      "expand": true,
+      "pageTitle": "Badr Delivery Platform - Test Report",
+      "includeConsoleLog": true
+    }]
+  ]
   }
 }
